feat: new powerful filters to contracts table

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -32,6 +32,7 @@
     "@lingui/detect-locale": "^5.2.0",
     "@lingui/macro": "^5.2.0",
     "@lingui/react": "^5.2.0",
+    "@number-flow/react": "^0.5.10",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@react-router/node": "^7.1.5",
