--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -65,6 +65,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^10.12.8",
     "lucide-react": "^0.279.0",
     "luxon": "^3.4.2",
@@ -73,7 +74,7 @@
     "perfect-freehand": "^1.2.0",
     "react": "^18",
     "react-colorful": "^5.6.1",
-    "react-day-picker": "^9.4.3",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.45.4",
     "react-pdf": "7.7.3",
